--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -22,8 +22,29 @@
         </tr>
       </tfoot>
 
-      <!-- モーダルウィンドウ -->
+      <!-- 削除・編集呼び出しモーダルウィンドウ -->
       <div class="modal fade" id="modal-<%= menu_list.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">編集・削除</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>編集</p>
+              <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#modal-e<%= menu_list.id %>">編集</button>
+              <%= link_to "イベントを削除する", menu_list_path(menu_list), method: :delete, data: {confirm: "このイベントを削除しますか？"}, class:"btn btn-block btn-outline-secondary d-flex align-items-center" %>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="modal-e<%= menu_list.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -33,8 +54,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <p>編集</p>
-                <%= link_to "イベントを削除する", menu_list_path(menu_list), method: :delete, data: {confirm: "このイベントを削除しますか？"}, class:"btn btn-block btn-outline-secondary d-flex align-items-center" %>
+              ///
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
