--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,7 +110,7 @@ header a{
     .table_head {display:none}
   }
 
-  .btn-block {
+  .edit_button {
     display: block;
     width: 100%;
     height: 3rem;
