--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -9,6 +9,7 @@
     </tr>
   </thead>
   <% @menu_lists.each_with_index do |menu_list,ids| %>
+    <% @this_menu = @families.find(menu_list.family_id) %>
       <tfoot class="card row mt-4 t_foot">
         <tr class="card-body offset-1 col-10 row">
             <td class="col-md-4 d-flex align-items-center justify-content-center table_data">
@@ -17,7 +18,7 @@
               </div>
             </td>
             <td class="col-md-4 d-flex align-items-center justify-content-center"><%= image_tag menu_list.image.url, class:"img-fluid" ,alt:"Responsive image" %></td>
-            <td class="col-md-3 d-flex align-items-center justify-content-center"><%= @families.find(menu_list.family_id).family_name %></td>
+            <td class="col-md-3 d-flex align-items-center justify-content-center"><%= @this_menu.family_name %></td>
             <td class="col-md-1"><button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#modal-<%= menu_list.id %>">・・・</button></td>
         </tr>
       </tfoot>
@@ -27,15 +28,18 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">編集・削除</h5>
+              <h5 class="modal-title" id="exampleModalLabel">編集・削除？</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-              <p>編集</p>
-              <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#modal-e<%= menu_list.id %>">編集</button>
-              <%= link_to "イベントを削除する", menu_list_path(menu_list), method: :delete, data: {confirm: "このイベントを削除しますか？"}, class:"btn btn-block btn-outline-secondary d-flex align-items-center" %>
+              <button type="button" class="btn btn-block btn-outline-secondary d-flex align-items-center edit_button" data-toggle="modal" data-target="#modal-e<%= menu_list.id %>">
+                <%= link_to "コメント編集", edit_menu_list_path(menu_list), remote: true %>
+                編集
+              </button>
+              <%= link_to "削除", menu_list_path(menu_list), method: :delete, data: {confirm: "#{menu_list.menu_name}を削除しますか？"},
+              class:"btn btn-block btn-outline-secondary d-flex align-items-center edit_button" %>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
@@ -44,16 +48,19 @@
         </div>
       </div>
 
-      <div class="modal fade" id="modal-e<%= menu_list.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <!-- 編集モーダルウィンドウ -->
+      <div class="modal fade" id="modal-e<%= menu_list.id %>" tabindex="1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <h5 class="modal-title" id="exampleModalLabel">編集</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
+              <!-- 試し -->
+              <div class="this_menu" id ="this_menu_<%= menu_list.id %>"></div>
               ///
             </div>
             <div class="modal-footer">
