--- a/app/views/menu_lists/_edit_menu_form.html.erb
+++ b/app/views/menu_lists/_edit_menu_form.html.erb
@@ -12,7 +12,9 @@
 
   <%= form.label :メニュー名 %>
   <%= form.text_field :menu_name %>
-  <%= image_tag(@menu_list.image.url) if @menu_list.image && @menu_list.image.url %>
+  <% unless have_image?(@menu_list)%>
+    <%= image_tag(@menu_list.image.url) %>
+  <% end %>
   <%= form.file_field :image %>
   <%= form.collection_select :family_id, @families, :family_name, :family_name %>
   <%= form.submit "登録"%>
