--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -119,5 +119,13 @@ header a{
     border-radius: 0;
     color: Black;
   }
-  button.btn-block a{
+  .edit_or_delete{
+    font-family: 'Corben', cursive;
+    height: 100%;
+  }
+  .edit_or_delete_header{
+    background-color: yellow;
+    font-size: 2vh;
+    width: 100%
+    height: 9vh;
   }
