--- a/app/views/menu_lists/_edit_menu_form.html.erb
+++ b/app/views/menu_lists/_edit_menu_form.html.erb
@@ -9,12 +9,18 @@
       </ul>
     </div>
   <% end %>
-
-  <%= form.label :メニュー名 %>
-  <%= form.text_field :menu_name %>
-  <%= have_image?(@menu_list) %>
-  <%= form.file_field :image %>
-  <%= form.collection_select :family_id, @families, :family_name, :family_name %>
+  <div class="form-group">
+    <%= form.label :メニュー名 %>
+    <%= form.text_field :menu_name %>
+  </div>
+  <div class="form-group">
+    <%= have_image?(@menu_list) %>
+  </div>
+  <div class="form-group">
+    <%= form.file_field :image %>
+  </div>
+  <div class="form-group">
+    <%= form.collection_select :family_id, @families, :family_name, :family_name %>
+  </div>
   <%= form.submit "更新"%>
-
 <% end %>
