更新ボタンを押すとモーダルが閉じるように実装

--- a/app/views/menu_lists/index.js.erb
+++ b/app/views/menu_lists/index.js.erb
@@ -1,3 +1,10 @@
 $("textarea").val("");
 $("input").val("");
-$('#exampleModal').modal('hide')
+<% if params[:action] == "update" %>
+  $("#modal-e"+"<%= @menu_list.id %>").modal('hide')
+  $("#modal-"+"<%= @menu_list.id %>").modal('hide')
+<% else %>
+  $('#exampleModal').modal('hide')
+<% end %>
+
+// $('#exampleModal').modal('hide')
