--- a/app/views/menu_lists/_edit_menu_form.html.erb
+++ b/app/views/menu_lists/_edit_menu_form.html.erb
@@ -1,26 +1,37 @@
-<%= form_with(model: @menu_list, local: true) do |form| %>
-  <% if @menu_list.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @menu_list.errors.count %>件のエラーがあります。</h2>
-      <ul>
-        <% @menu_list.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
+<div class="modal-header">
+  <h5 class="modal-title" id="exampleModalLabel">編集</h5>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <%= form_with(model: @menu_list, remote: true) do |form| %>
+    <% if @menu_list.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= @menu_list.errors.count %>件のエラーがあります。</h2>
+        <ul>
+          <% @menu_list.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="form-group">
+      <%= form.label :メニュー名 %>
+      <%= form.text_field :menu_name %>
+    </div>
+    <div class="form-group">
+      <%= have_image?(@menu_list) %>
+    </div>
+    <div class="form-group">
+      <%= form.file_field :image %>
+    </div>
+    <div class="form-group">
+      <%= form.collection_select :family_id, @families, :family_name, :family_name %>
+    </div>
+    <div class="modal-footer">
+      <%= form.submit "更新", class:"btn btn-primary" %>
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
     </div>
   <% end %>
-  <div class="form-group">
-    <%= form.label :メニュー名 %>
-    <%= form.text_field :menu_name %>
-  </div>
-  <div class="form-group">
-    <%= have_image?(@menu_list) %>
-  </div>
-  <div class="form-group">
-    <%= form.file_field :image %>
-  </div>
-  <div class="form-group">
-    <%= form.collection_select :family_id, @families, :family_name, :family_name %>
-  </div>
-  <%= form.submit "更新"%>
-<% end %>
+</div>  
