--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -34,7 +34,8 @@
               </button>
             </div>
             <div class="modal-body">
-                <%= link_to "編集", edit_menu_list_path(menu_list), remote: true,class:"btn btn-block btn-outline-secondary d-flex align-items-center edit_button", "data-toggle" => "modal", 'data-target' => '#modal-e#{menu_list.id}'%>
+              <%= link_to "編集", edit_menu_list_path(menu_list), remote: true,
+              class:"btn btn-block btn-outline-secondary d-flex align-items-center edit_button", "data-toggle" => "modal", 'data-target' => '#modal-e#{menu_list.id}'%>
               <%= link_to "削除", menu_list_path(menu_list), method: :delete, data: {confirm: "#{menu_list.menu_name}を削除しますか？"},
               class:"btn btn-block btn-outline-secondary d-flex align-items-center edit_button" %>
             </div>
@@ -44,23 +45,11 @@
           </div>
         </div>
       </div>
-
       <!-- 編集モーダルウィンドウ -->
       <div class="modal fade" id="modal-e<%= menu_list.id %>" tabindex="1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">編集</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="this_menu" id ="this_menu_<%= menu_list.id %>"></div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
-            </div>
+            <div class="this_menu" id ="this_menu_<%= menu_list.id %>"></div>
           </div>
         </div>
       </div>
