（エラー再現）更新した後画面が暗くなる

--- a/app/views/menu_lists/_add_family_form.html.erb
+++ b/app/views/menu_lists/_add_family_form.html.erb
@@ -8,6 +8,7 @@
         </button>
       </div>
       <div class="modal-body">
+        <% family_check(@family) %>
         <%= form_with(model: @family) do |form| %>
           <% if @family.errors.any? %>
             <div id="error_explanation">
