--- a/app/views/menu_lists/index.js.erb
+++ b/app/views/menu_lists/index.js.erb
@@ -3,8 +3,8 @@ $("input").val("");
 <% if params[:action] == "update" %>
   $("#modal-e"+"<%= @menu_list.id %>").modal('hide')
   $("#modal-"+"<%= @menu_list.id %>").modal('hide')
+  $('.show_menu').html("<%= escape_javascript(render 'show', menu_lists: @menu_lists, families: @families ) %>")
+  // $(".show_menu").replaceWith("<%= j render 'menu_lists/show', menu_lists: @menu_lists, families: @families %>");
 <% else %>
   $('#exampleModal').modal('hide')
 <% end %>
-
-// $('#exampleModal').modal('hide')
