--- a/app/views/menu_lists/_add_menu_form.html.erb
+++ b/app/views/menu_lists/_add_menu_form.html.erb
@@ -7,6 +7,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+      <% menu_check(@menu_list) %>
       <%= form_with(model: @menu_list) do |form| %>
       <% if @menu_list.errors.any? %>
         <div id="error_explanation">
