（エラー実装）pegeネーションの位置がおかしい

--- a/app/views/menu_lists/_show.html.erb
+++ b/app/views/menu_lists/_show.html.erb
@@ -1,4 +1,4 @@
-<table class="container show_table">
+  <table class="container show_table">
   <thead class="row mt-5">
     <tr class="offset-1 col-10 row table_head">
       <th class="col-4">メニュー名</th>
@@ -53,4 +53,4 @@
         </div>
       </div>
   <% end %>
-</table>
+</<table>
