ajaxで更新を諦めてリロードするようにした

--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -1,5 +1,5 @@
 <div class="show_menu">
-    <%= render "show" , menu_lists: @menu_lists, families:@families %>
+    <%= render "menu_list_show" , menu_lists: @menu_lists, families:@families %>
 </div>
 <!-- ページネーション -->
 <div class="paginate mt-4">
