--- a/app/views/menu_lists/update.js.erb
+++ b/app/views/menu_lists/update.js.erb
@@ -1,3 +1,9 @@
-$("#modal-e"+"<%= @menu_list.id %>").modal('hide');
-$("#modal-"+"<%= @menu_list.id %>").modal('hide');
+// うまくいかない(destoy)
+// $("#modal-"+"<%= @menu_list.id %>").modal('hide');
+// $('.show_menu').html("<%= escape_javascript(render 'menu_list_show', menu_lists: @menu_lists, families: @families ) %>");
+//
+
+// うまくいかない(update)
+// $("#modal-e"+"<%= @menu_list.id %>").modal('hide');
+// $("#modal-"+"<%= @menu_list.id %>").modal('hide');
 // $('.show_menu').html("<%= escape_javascript(render 'menu_list_show', menu_lists: @menu_lists, families: @families ) %>");
