--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,6 @@ header{
 header a{
   color: white;
   white-space: nowrap;
-
 }
 .btn-link{
   color: white;
@@ -126,6 +125,6 @@ header a{
   .edit_or_delete_header{
     background-color: yellow;
     font-size: 2vh;
-    width: 100%
-    height: 9vh;
+    width: 100%;
+    height:9vh;
   }
