--- a/app/views/menu_lists/_menu_list_show.html.erb
+++ b/app/views/menu_lists/_menu_list_show.html.erb
@@ -12,7 +12,7 @@
       <tfoot class="card row mt-4 t_foot">
         <tr class="card-body offset-1 col-10 row">
             <td class="col-md-4 d-flex align-items-center justify-content-center table_data">
-              <div class="menu_name">
+              <div class="menu_name" id="menu_name_<%= menu_list.id %>">
                 <%= menu_list.menu_name %>
               </div>
             </td>
