--- a/app/views/menu_lists/_menu_list_show.html.erb
+++ b/app/views/menu_lists/_menu_list_show.html.erb
@@ -36,7 +36,7 @@
               <%= link_to "編集", edit_menu_list_path(menu_list), remote: true,
               class:"btn btn-block btn-outline-secondary d-flex align-items-center edit_button", "data-toggle" => "modal", 'data-target' => '#modal-e#{menu_list.id}'%>
               <%= link_to "削除", menu_list_path(menu_list), method: :delete, data: {confirm: "#{menu_list.menu_name}を削除しますか？"},
-              class:"btn btn-block btn-outline-secondary d-flex align-items-center edit_button" %>
+              class:"btn btn-block btn-outline-secondary d-flex align-items-center edit_button", remote: true %>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
