_add_menu_form0のファイルを削除

--- a/app/views/families/index.js.erb
+++ b/app/views/families/index.js.erb
@@ -1,4 +1,3 @@
 $("textarea").val("");
 $("input").val("");
-$('#exampleModalLong').modal('hide')
-// $('.show_menu').html("<%= escape_javascript(render 'menu_list_show', menu_lists: @menu_lists, families: @families ) %>");
+$('#exampleModalLong').modal('hide');
