--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -1,6 +1,6 @@
 <!-- Button trigger modal -->
-<div class="edit_family_list text-right">
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+<div class="text-right">
+  <button type="button" class="btn edit_family_list_button " data-toggle="modal" data-target="#exampleModalLong">
     Edit_family_list
   </button>
 </div>
