edit_family_buttonの一調整

--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -1,8 +1,10 @@
 <!-- Button trigger modal -->
-<div class="text-right">
-  <button type="button" class="btn edit_family_list_button " data-toggle="modal" data-target="#exampleModalLong">
-    Edit_family_list
-  </button>
+<div class="container">
+  <div class="text-right row">
+    <button type="button" class="btn edit_family_list_button offset-5 col-6 offset-md-10 col-md-2" data-toggle="modal" data-target="#exampleModalLong">
+      Edit_family_list
+    </button>
+  </div>
 </div>
 
 <!-- Modal -->
