edit_familyをajaxでフォーム切り替え成功

--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -21,7 +21,7 @@
         <table>
           <% @families.each_with_index do |families, ids|%>
             <tr>
-              <td><%= families.family_name %></td>
+              <td><div id="f<%= families.id %>""><%= families.family_name %></div></td>
               <td><%= link_to "編集", edit_family_path(families), remote: true %></td>
               <td><%= link_to "削除", family_path(families),method: :delete, remote: true, data: {confirm: "#{families.family_name}の名前を削除しますか？"} %></td>
               <%#= link_to "編集", edit_menu_list_path(menu_list), remote: true,
