--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -8,44 +8,12 @@
 </div>
 
 <!-- edit_family_list_button Modal -->
-<div class="modal fade" id="edit_family_list_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <table>
-          <% @families.each_with_index do |families, ids|%>
-            <tr>
-              <td><div id="f<%= families.id %>""><%= families.family_name %></div></td>
-              <td><%= link_to "編集", edit_family_path(families), remote: true %></td>
-              <td><%= link_to "削除", family_path(families),method: :delete, remote: true, data: {confirm: "#{families.family_name}の名前を削除しますか？"} %></td>
-              <%#= link_to "編集", edit_menu_list_path(menu_list), remote: true,
-              class:"btn btn-block btn-outline-secondary d-flex align-items-center edit_button", "data-toggle" => "modal", 'data-target' => '#modal-e#{menu_list.id}'%>
-            </tr>
-          <% end %>
-        </table>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
+<%= render "families/family_lists", families:@families %>
 
 
 <!-- showページ -->
 <div class="show_menu">
-    <%= render "menu_list_show" , menu_lists: @menu_lists, families:@families %>
+    <%= render "menu_list_show", menu_lists: @menu_lists, families:@families %>
 </div>
 <!-- ページネーション -->
 <div class="paginate mt-4">
