--- a/app/views/families/_family_lists.html.erb
+++ b/app/views/families/_family_lists.html.erb
@@ -7,7 +7,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body family_lists">
+      <div class="family_lists">
         <%= render "families/family_lists_modal_body", families: @families %>
       </div>
       <div class="modal-footer">
