--- a/app/views/families/_family_lists_modal_body.html.erb
+++ b/app/views/families/_family_lists_modal_body.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-body">
+<div class="modal-body" id="edit_destroy_modal">
   <table>
     <% @families.each_with_index do |families, ids|%>
       <tr>
