--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <!-- edit_family_list_button Modal -->
-<%= render "families/family_lists", families:@families %>
+<%= render "families/family_lists", families:@families, menu_lists: @menu_lists %>
 
 
 <!-- showページ -->
