--- a/app/views/families/destroy.js.erb
+++ b/app/views/families/destroy.js.erb
@@ -1,2 +1,2 @@
-$(".family_lists").replaceWith("<%= j render 'families/family_lists_modal_body', families: @families %>");
+$(".family_lists").replaceWith("<%= j render 'families/family_lists_modal_body', families: @families,  menu_lists: @menu_lists %>");
 $('#edit_destroy_modal').wrap('<div class="family_lists">');
