--- a/app/views/families/_family_lists.html.erb
+++ b/app/views/families/_family_lists.html.erb
@@ -1,8 +1,8 @@
 <div class="modal fade" id="edit_family_list_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+      <div class="modal-header edit_or_delete_modal_header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Family_lists. edit_or_delete?</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -12,7 +12,6 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
