--- a/app/views/families/_family_lists_modal_body.html.erb
+++ b/app/views/families/_family_lists_modal_body.html.erb
@@ -1,22 +1,23 @@
 <div class="modal-body" id="edit_destroy_modal">
-  <table>
-    <tr>
-      <th></th>
-      <th>登録メニュー数</th>
-
+  <table class="container family_lists_table">
+    <tr class="row">
+      <th class="col-4 text-center">Family_list</th>
+      <th class="col-4 text-center">Menu_count</th>
+      <th class="col-2"></th>
+      <th class="col-2"></th>
     </tr>
     <% @families.each_with_index do |families, ids|%>
-      <tr>
-        <td>
-          <div id="f<%= families.id %>">
+      <tr class="row">
+        <td class="col-4 pl-4 family_name_lists">
+          <div id="f<%= families.id %>" class="family_name_lists">
             <%= families.family_name %>
           </div>
         </td>
-        <td>
+        <td class="text-center col-2 col-md-4">
           <%=  @menu_lists.where(family_id:families.id).count %>
         </td>
-        <td><%= link_to "編集", edit_family_path(families), remote: true %></td>
-        <td><%= link_to "削除", family_path(families),method: :delete, remote: true, data: {confirm: "#{families.family_name}の名前を削除しますか？"} %></td>
+        <td class="col-3 col-md-2 family_edit_or_delete_button"><%= link_to "編集", edit_family_path(families), remote: true, class:"btn btn-outline-info" %></td>
+        <td class="col-2 family_edit_or_delete_button"><%= link_to "削除", family_path(families),method: :delete, remote: true, data: {confirm: "#{families.family_name}の名前を削除しますか？"},class:"btn btn-outline-danger" %></td>
       </tr>
     <% end %>
   </table>
