add_menuに家族編集を反映させた

--- a/app/views/families/edit.js.erb
+++ b/app/views/families/edit.js.erb
@@ -1,1 +1,1 @@
-$("#f<%= @family.id %>").replaceWith("<%= j render 'families/family_form', family:@family %>");
+$("#f1").replaceWith("<%= j render 'families/family_form', family:@family %>");
