--- a/app/views/families/_family_lists_modal_body.html.erb
+++ b/app/views/families/_family_lists_modal_body.html.erb
@@ -7,7 +7,7 @@
       <th class="col-2"></th>
     </tr>
     <% @families.each_with_index do |families, ids|%>
-    <div id="f<%= families.id %>">
+    <div id="f1"></div>
       <tr class="row">
           <td class="col-4 pl-4 family_name_lists">
             <div class="family_name_lists">
@@ -20,7 +20,6 @@
           <td class="col-3 col-md-2 family_edit_or_delete_button"><%= link_to "編集", edit_family_path(families), remote: true, class:"btn btn-outline-info" %></td>
           <td class="col-2 family_edit_or_delete_button"><%= link_to "削除", family_path(families),method: :delete, remote: true, data: {confirm: "#{families.family_name}の名前を削除しますか？"},class:"btn btn-outline-danger" %></td>
       </tr>
-    </div>
     <% end %>
   </table>
 </div>
