--- a/app/views/families/_family_lists_modal_body.html.erb
+++ b/app/views/families/_family_lists_modal_body.html.erb
@@ -15,7 +15,7 @@
             </div>
           </td>
           <td class="text-center col-2 col-md-4">
-            <%=  @menu_lists.where(family_id:families.id).count %>
+            <%=  @menu_lists_all.where(family_id:families.id).count %>
           </td>
           <td class="col-3 col-md-2 family_edit_or_delete_button"><%= link_to "編集", edit_family_path(families), remote: true, class:"btn btn-outline-info" %></td>
           <td class="col-2 family_edit_or_delete_button"><%= link_to "削除", family_path(families),method: :delete, remote: true, data: {confirm: "#{families.family_name}の名前を削除しますか？"},class:"btn btn-outline-danger" %></td>
