--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width">
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
@@ -34,6 +33,8 @@
       <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
     <%= yield %>
-    <p><%= link_to '戻る', 'javascript:history.back()' %></p>
+    <% if user_signed_in? %>
+      <p><%= link_to '戻る', 'javascript:history.back()' %></p>
+    <% end %>
   </body>
 </html>
