--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -176,3 +176,6 @@ header a{
 @media screen and (max-width: 460px){
   .new_registrations_image {display:none}
 }
+@media screen and (min-width: 460px){
+  #new_registrations_image {display:none}
+}
