--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,8 @@
 <div class="container new_registrations">
-  <div class="row ">
+  <div class="row">
+    <div class="d-flex align-items-center col-12" id="new_registrations_image">
+      <img src="/imaage/session_image.png" class="img-fluid" ,alt="Responsive image" id="new_registrations_image">
+    </div>
     <div class="offset-md-4 col-md-2 col-12">
       <div class="">
         <h2>Sign up</h2>
