Precompiling assets failed.css

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container new_registrations">
   <div class="row">
     <div class="d-flex align-items-center col-12" id="new_registrations_image">
-      <img src="/imaage/session_image.png" class="img-fluid" ,alt="Responsive image" id="new_registrations_image">
+      <img src="/image/session_image.png" class="img-fluid" ,alt="Responsive image" id="new_registrations_image">
     </div>
     <div class="offset-md-4 col-md-2 col-12">
       <div class="">
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="col-md-4 d-flex align-items-center col-12 new_registrations_image">
-      <img src="/imaage/session_image.png" class="img-fluid new_registrations_image" ,alt="Responsive image">
+      <img src="/image/session_image.png" class="img-fluid new_registrations_image" ,alt="Responsive image">
     </div>
   </div>
 </div>
