サインアップの背景の色調整

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -167,16 +167,19 @@ header a{
 
 /* ログイン画面 */
 .sessions{
-  /* background-color: rgb(111 176 218 / 44%); */
   background-color: rgb(158, 213, 223);
 }
 
 .new_registrations{
   margin-top: 130px;
 }
+/* サインアップ画面 */
 @media screen and (max-width: 460px){
   .new_registrations_image {display:none}
 }
 @media screen and (min-width: 460px){
   #new_registrations_image {display:none}
+}
+.registrations{
+  background-color: rgb(158, 213, 223);
 }
