--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -16,9 +16,11 @@
    <div class="container text-center">
      <div class="row card">
        <div class="text-left back_main offset-md-4 col-md-4 offset-2 col-8 card-body">
-           <p><strong>1.</strong>「Add family_name」で家族名を追加してください</p>
-           <p><strong>2.</strong>「Add menu」でメニューを登録してください</p>
-           <p><strong>3.</strong>ページを再読み込みして利用開始できます</p>
+         <h3>使い方</h3>
+         <br>
+         <p><strong>1.</strong>「Add family_name」で家族名を追加してください</p>
+         <p><strong>2.</strong>「Add menu」でメニューを登録してください</p>
+         <p><strong>3.</strong>ページを再読み込みして利用開始できます</p>
        </div>
      </div>
    </div>
