--- a/app/views/menu_lists/_add_menu_form.html.erb
+++ b/app/views/menu_lists/_add_menu_form.html.erb
@@ -19,18 +19,22 @@
           </ul>
         </div>
       <% end %>
-        <div class="modal-body">
-          <div class=""form-group"">
-            <%= form.label :メニュー名 %>
-            <%= form.text_field :menu_name %>
+      <div class="container">
+          <div class="modal-body row">
+            <div class="form-group ">
+              <%= form.label :メニュー名 %>
+              <%= form.text_field :menu_name %>
+            </div>
+            <div class="form-group">
+              <%= form.label :Image %>
+              <%= form.file_field :image %>
+            </div>
+            <div class="form-group">
+              <%= form.label :投稿者 %>
+              <%= form.collection_select :family_id, @families, :family_name, :family_name, include_blank: "選択して下さい" %>
+            </div>
           </div>
-          <div class="form-group">
-            <%= form.file_field :image %>
-          </div>
-          <div class="form-group">
-            <%= form.collection_select :family_id, @families, :family_name, :family_name, include_blank: "選択して下さい" %>
-          </div>
-        </div>
+      </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
           <%= form.submit "登録", class:"btn btn-primary"%>
