--- a/app/views/menu_lists/_add_menu_form.html.erb
+++ b/app/views/menu_lists/_add_menu_form.html.erb
@@ -20,18 +20,18 @@
         </div>
       <% end %>
       <div class="container">
-          <div class="modal-body row">
-            <div class="form-group ">
-              <%= form.label :メニュー名 %>
-              <%= form.text_field :menu_name %>
+          <div class="modal-body">
+            <div class="form-group row">
+              <%= form.label :メニュー名, class:"col-4" %>
+              <%= form.text_field :menu_name, class:"col-8" %>
             </div>
-            <div class="form-group">
-              <%= form.label :Image %>
-              <%= form.file_field :image %>
+            <div class="form-group row">
+              <%= form.label :Image, class:"col-4" %>
+              <%= form.file_field :image, class:"col-8" %>
             </div>
-            <div class="form-group">
-              <%= form.label :投稿者 %>
-              <%= form.collection_select :family_id, @families, :family_name, :family_name, include_blank: "選択して下さい" %>
+            <div class="form-group row">
+              <%= form.label :投稿者, class:"col-4" %>
+              <%= form.collection_select :family_id, @families, :family_name, :family_name, include_blank: "選択して下さい", class:"col-8" %>
             </div>
           </div>
       </div>
