--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,7 @@
 
   $(".tool").mouseover(function(){
     $(this).next("span.comment").fadeIn().css({
-      "top":$(this).offset().top+30+"px",
-      // "left":$(this).offset().left-10+"px"
+      "top":$(this).offset().top+30+"px"
     });
   }).mouseout(function(){
     $(this).next("span.comment").fadeOut();
